@@ -1,3 +1,10 @@
+Fri Feb  8 14:37:16 UTC 2013  Byron Harris  <harrisb@ociweb.com>
+
+        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:
+
+          Revert a change for wchar support that was causing
+          compile failure for narrow char build.
+
 Fri Feb  8 03:47:02 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>
 
         * tao/CDR.h:
